added CNN network and custom modules

--- a/chess_engine.ipynb
+++ b/chess_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlT9QnVPOOyLsz8HjALnjv",
+      "authorship_tag": "ABX9TyNCGBf7CBRMts5JTFJszpdB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
         "id": "O0i4UWTJ5UK3",
         "outputId": "5c6993d3-716e-4ed0-e5cc-7be84309fc14"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "-9lK3WQS5Vyu"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "-cpx8sKH5aiN"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "kSrxm2Ol5dPU"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "b5s7TYvn5hts"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "TkYAWtCH5k1o"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
       "metadata": {
         "id": "vvGDZytm5pKI"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "id": "YFrMzrxH5xmS",
         "outputId": "27f9c28f-cbb1-4fd0-f9a7-b61dd3b0c860"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "G_sasMvd502S"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,7 +284,7 @@
         "id": "gQljJ1bt54FC",
         "outputId": "d888c8d9-78b4-41d9-a00c-a06d1e2656a9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,9 +297,193 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from torch.utils.data import Dataset\n",
+        "\n",
+        "# pytorch dataset class\n",
+        "class ChessDataset(Dataset):\n",
+        "    def __init__(self, games):\n",
+        "      super(ChessDataset, self).__init__()\n",
+        "      self.games = games\n",
+        "\n",
+        "    def __len__(self):\n",
+        "      return 40_000\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "      # generate a random index from the number of games in the dataset\n",
+        "      game_i = np.random.randint(self.games.shape[0])\n",
+        "\n",
+        "      # get the algebraic notation from the random index\n",
+        "      random_game = chess_data['AN'].values[game_i]\n",
+        "\n",
+        "      # create a list of moves from the random game\n",
+        "      moves = create_move_list(random_game)\n",
+        "\n",
+        "      #  randomly select a state (position) from the game by choosing a move number within the range of the number of moves in the game\n",
+        "      game_state_i = np.random.randint(len(moves) - 1)\n",
+        "\n",
+        "      # get the move from the randomly selected position\n",
+        "      # this will be the target move the model will try to predict\n",
+        "      next_move = moves[game_state_i]\n",
+        "\n",
+        "      # keep only the moves up to the randomly selected position\n",
+        "      moves = moves[ : game_state_i]\n",
+        "\n",
+        "      # create a new board object\n",
+        "      board = chess.Board()\n",
+        "      # make all the moves up to the randomly selected position\n",
+        "      for move in moves:\n",
+        "        board.push_san(move)\n",
+        "\n",
+        "      # convert the board to a matrix representation, this will be the input to the model\n",
+        "      x = board_to_rep(board)\n",
+        "      # convert the move to a matrix representation, this will be the target output of the model\n",
+        "      y = move_to_rep(next_move, board)\n",
+        "\n",
+        "      # if it is an odd index move, it means black's move\n",
+        "      if game_state_i % 2 == 1:\n",
+        "        x *= -1;\n",
+        "\n",
+        "      # Convert the NumPy array x to a PyTorch tensor\n",
+        "      x = torch.tensor(x, dtype=torch.float32)\n",
+        "      y = torch.tensor(y, dtype=torch.float32)\n",
+        "\n",
+        "      return x, y"
+      ],
       "metadata": {
         "id": "Zp8m542O7dG_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "CNN Network and Custom Modules"
+      ],
+      "metadata": {
+        "id": "w_MrMJuLOv9d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "\n",
+        "#  creating a custom convolutional neural network module\n",
+        "class module(nn.Module):\n",
+        "\n",
+        "    # initialize model's layers and parameters\n",
+        "    def __init__(self, hidden_size):\n",
+        "        super(module, self).__init__()\n",
+        "\n",
+        "        # Two 2-D convolutional layers\n",
+        "        # applies a 3x3 convolution to the input tensor\n",
+        "        self.conv1 = nn.Conv2d(hidden_size, hidden_size,\n",
+        "                               3, stride=1, padding=1)\n",
+        "        self.conv2 = nn.Conv2d(hidden_size, hidden_size,\n",
+        "                               3, stride=1, padding=1)\n",
+        "        # 2 batch normalization layers\n",
+        "        # stabilizes and accelerates training by normalizing the input of each layer\n",
+        "        self.bn1 = nn.BatchNorm2d(hidden_size)\n",
+        "        self.bn2 = nn.BatchNorm2d(hidden_size)\n",
+        "        # 2 SELU activation functions\n",
+        "        # helps with vanishing and exploding gradients\n",
+        "        self.activation1 = nn.SELU()\n",
+        "        self.activation2 = nn.SELU()\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # save the input tensor for the skip connection\n",
+        "        x_input = torch.clone(x)\n",
+        "\n",
+        "        # pass the input tensor through the layers\n",
+        "        x = self.conv1(x)\n",
+        "        x = self.bn1(x)\n",
+        "        x = self.activation1(x)\n",
+        "        x = self.conv2(x)\n",
+        "        x = self.bn2(x)\n",
+        "        x = self.activation2(x)\n",
+        "\n",
+        "        # add the input tensor to the processed tensor\n",
+        "        # this is called a skip or residual connection, it helps to learn the residual between the input and output tensors\n",
+        "        x = x + x_input\n",
+        "        # pass the tensor through the activation function\n",
+        "        x = self.activation2(x)\n",
+        "\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "TNkB_exeOu6l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn.functional as F\n",
+        "\n",
+        "# creating the entire chess network\n",
+        "class ChessNet(nn.Module):\n",
+        "\n",
+        "    def __init__(self, hidden_layers=4, hidden_size=200):\n",
+        "        super(ChessNet, self).__init__()\n",
+        "\n",
+        "        self.hidden_layers = hidden_layers\n",
+        "        # set input with 6 channels (one for each piece type for both colors)\n",
+        "        self.input_layer = nn.Conv2d(6, hidden_size, 3, stride=1, padding=1)\n",
+        "        # create a list-like container to store the custom modules\n",
+        "        # for each hidden layer in the network create a custom module\n",
+        "        self.module_list = nn.ModuleList(\n",
+        "            [module(hidden_size) for _ in range(hidden_layers)])\n",
+        "        # set output with 2 channels (one for the from square and one for the to square)\n",
+        "        self.output_layer = nn.Conv2d(hidden_size, 2, 3, stride=1, padding=1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # pass the input tensor through the layers\n",
+        "        x = self.input_layer(x)\n",
+        "\n",
+        "        # pass through a ReLU activation function\n",
+        "        x = F.relu(x)\n",
+        "\n",
+        "        # iterate through the custom modules and pass the input tensor through each one\n",
+        "        for i in range(self.hidden_layers):\n",
+        "            x = self.module_list[i](x)\n",
+        "\n",
+        "        x = self.output_layer(x)\n",
+        "\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "4MPCYO_KO2YX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize the ChessNet model with desired hyperparameters\n",
+        "hidden_layers = 4\n",
+        "hidden_size = 200\n",
+        "chess_net_model = ChessNet(hidden_layers, hidden_size)\n",
+        "\n",
+        "# Define the predict function to make predictions\n",
+        "\n",
+        "\n",
+        "def predict(x):\n",
+        "    # Ensure the input tensor has the correct shape (e.g., (batch_size, channels, height, width))\n",
+        "\n",
+        "    # Set the model in evaluation mode\n",
+        "    chess_net_model.eval()\n",
+        "    # Make predictions by passing the input tensor through the model\n",
+        "    with torch.no_grad():\n",
+        "        output = chess_net_model(x)\n",
+        "\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "qMh1ZLg8O3xX"
       },
       "execution_count": null,
       "outputs": []
