added move selection modules

--- a/chess_engine.ipynb
+++ b/chess_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCGBf7CBRMts5JTFJszpdB",
+      "authorship_tag": "ABX9TyN4a/sNDCd0gVpPNyIxdSaR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,6 +484,119 @@
       ],
       "metadata": {
         "id": "qMh1ZLg8O3xX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Picking Moves"
+      ],
+      "metadata": {
+        "id": "fMJA3kL22ssA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check mate in 1\n",
+        "def checkmate_in_one(board):\n",
+        "    board = board.copy()\n",
+        "    legal_moves = list(board.legal_moves)\n",
+        "    for move in legal_moves:\n",
+        "        board.push_uci(str(move))\n",
+        "        if board.is_checkmate():\n",
+        "            move = board.pop()\n",
+        "            return move\n",
+        "        _ = board.pop()\n",
+        "\n",
+        "# Distribution over moves\n",
+        "def distribution_over_moves(vals):\n",
+        "    # Application of softmax function on the values\n",
+        "    probs = np.array(vals)\n",
+        "    probs = np.exp(probs)\n",
+        "    probs = probs / np.sum(probs)\n",
+        "\n",
+        "    # Take distribution to the power of 3 and normalize it again\n",
+        "    # Increases gap between high and low probs, so bad moves are chosen less often\n",
+        "    probs = probs ** 3\n",
+        "    probs = probs / np.sum(probs)\n",
+        "\n",
+        "    return probs"
+      ],
+      "metadata": {
+        "id": "-2330cTb2rwq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "# Overall move selection\n",
+        "def choose_move(board, player, color):\n",
+        "\n",
+        "    legal_moves = list(board.legal_moves)\n",
+        "\n",
+        "    # check for forced checkmates\n",
+        "    move = checkmate_in_one(board)\n",
+        "    if move is not None:\n",
+        "        return move\n",
+        "\n",
+        "    # convert board to matrix representation\n",
+        "    x = torch.Tensor(board_to_rep(board)).float().unsqueeze(0).to('cpu')\n",
+        "    if color == chess.BLACK:\n",
+        "        x *= -1\n",
+        "\n",
+        "    # If x is a single sample, you may need to add a batch dimension.\n",
+        "    # As x has shape (channels, height, width), we can add a batch dimension as follows:\n",
+        "    # x = x.unsqueeze(0)\n",
+        "    # predict the move\n",
+        "    move = predict(x)\n",
+        "    # print(tf.shape(move))\n",
+        "\n",
+        "    ##############################################\n",
+        "    # from the list of legal moves, make a list of 'from' squares\n",
+        "    vals = []\n",
+        "    froms = [str(legal_move)[:2] for legal_move in legal_moves]\n",
+        "    froms = list(set(froms))\n",
+        "\n",
+        "    # for each 'from' sqaure, take the value that the network assigned to it, and make a move from that position\n",
+        "    for from_ in froms:\n",
+        "        val = move[0, 0, 8 - int(from_[1]), letter_to_num[from_[0]]]\n",
+        "        vals.append(val)\n",
+        "\n",
+        "    # convert the values to a probability distribution\n",
+        "    probs = distribution_over_moves(vals)\n",
+        "\n",
+        "    # choose a 'from' square based on the probability distribution\n",
+        "    chosen_from = str(np.random.choice(froms, size=1, p=probs)[0])[: 2]\n",
+        "\n",
+        "    ###############################################\n",
+        "    # make a second feature map, for the 'to' squares\n",
+        "    vals = []\n",
+        "    # for each legal move, if the 'from' square matches the chosen 'from' square, take the value that the network assigned to it, and make a move to that position\n",
+        "    for legal_move in legal_moves:\n",
+        "\n",
+        "        from_ = str(legal_move)[:2]\n",
+        "\n",
+        "        if from_ == chosen_from:\n",
+        "            to = str(legal_move)[2:]\n",
+        "            val = move[0, 0, 8 - int(to[1]), letter_to_num[to[0]]]\n",
+        "            vals.append(val)\n",
+        "        else:\n",
+        "            vals.append(0)\n",
+        "\n",
+        "    # take the max from this 2nd feature map\n",
+        "    chosen_move = legal_moves[np.argmax(vals)]\n",
+        "\n",
+        "    return chosen_move"
+      ],
+      "metadata": {
+        "id": "T0uMuB9R2u8P"
       },
       "execution_count": null,
       "outputs": []
