added custom loss function and entire training loop

--- a/chess_engine.ipynb
+++ b/chess_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4a/sNDCd0gVpPNyIxdSaR",
+      "authorship_tag": "ABX9TyOvriZp03GhrQwAwGxRbN9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,6 +597,123 @@
       ],
       "metadata": {
         "id": "T0uMuB9R2u8P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Training Loop"
+      ],
+      "metadata": {
+        "id": "6GcY7i2ONv40"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Custom loss function\n",
+        "\n",
+        "class ChessLoss(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(ChessLoss, self).__init__()\n",
+        "        self.metric_from = nn.CrossEntropyLoss()\n",
+        "        self.metric_to = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    def forward(self, output, y):\n",
+        "        # Calculate the loss for the \"from\" square prediction\n",
+        "        loss_from = self.metric_from(output[:, 0, :], y[:, 0])\n",
+        "\n",
+        "        # Calculate the loss for the \"to\" square prediction\n",
+        "        loss_to = self.metric_to(output[:, 1, :], y[:, 1])\n",
+        "\n",
+        "        # Combine the losses\n",
+        "        loss = loss_from + loss_to\n",
+        "        return loss"
+      ],
+      "metadata": {
+        "id": "QzCIcnC7NxRn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, random_split\n",
+        "\n",
+        "# Step 1: Prepare the dataset and split into training and testing subsets\n",
+        "dataset = ChessDataset(chess_data['AN'])\n",
+        "dataset_size = len(dataset)\n",
+        "train_size = int(0.8 * dataset_size)  # 80% of the data for training\n",
+        "test_size = dataset_size - train_size\n",
+        "\n",
+        "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+        "\n",
+        "# Step 2: Create data loaders for training and testing datasets\n",
+        "batch_size = 32\n",
+        "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "# Step 3: Define the loss function and optimizer\n",
+        "loss_function = ChessLoss()\n",
+        "learning_rate = 0.001\n",
+        "optimizer = optim.Adam(ChessNet().parameters(), lr=learning_rate)\n",
+        "\n",
+        "# Step 4: Training loop\n",
+        "num_epochs = 15\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "    # Training\n",
+        "    chess_net_model.train()\n",
+        "    total_train_loss = 0.0\n",
+        "    for inputs, targets in train_loader:\n",
+        "        optimizer.zero_grad()\n",
+        "        outputs = chess_net_model(inputs)\n",
+        "        loss = loss_function(outputs, targets)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        total_train_loss += loss.item() * inputs.size(0)\n",
+        "\n",
+        "    # Calculate average training loss for the epoch\n",
+        "    average_train_loss = total_train_loss / len(train_dataset)\n",
+        "\n",
+        "    # Step 5: Validation (Testing) after each epoch\n",
+        "    chess_net_model.eval()\n",
+        "    total_test_loss = 0.0\n",
+        "    correct_predictions = 0\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, targets in test_loader:\n",
+        "            outputs = chess_net_model(inputs)\n",
+        "            loss = loss_function(outputs, targets)\n",
+        "            total_test_loss += loss.item() * inputs.size(0)\n",
+        "\n",
+        "\n",
+        "            # Convert one-hot encoded targets to class indices\n",
+        "            target_indices = torch.argmax(targets, dim=1)\n",
+        "\n",
+        "            # Calculate the number of correct predictions for accuracy calculation\n",
+        "            _, predicted = torch.max(outputs, 1)\n",
+        "            correct_predictions += (predicted == target_indices).sum().item()\n",
+        "\n",
+        "    # Calculate average testing loss and accuracy for the epoch\n",
+        "    average_test_loss = total_test_loss / len(test_dataset)\n",
+        "    accuracy = correct_predictions / len(test_dataset)\n",
+        "\n",
+        "    print(f\"Epoch [{epoch + 1}/{num_epochs}] - \"\n",
+        "          f\"Train Loss: {average_train_loss:.4f}, Test Loss: {average_test_loss:.4f}, \"\n",
+        "          f\"Accuracy: {accuracy:.4f}\")\n",
+        "\n",
+        "# Training loop ends here\n",
+        "\n",
+        "# Save the model's state dictionary (recommended for inference)\n",
+        "torch.save(chess_net_model.state_dict(), '/content/chess_net_model.pth')"
+      ],
+      "metadata": {
+        "id": "PogsKy69Nydm"
       },
       "execution_count": null,
       "outputs": []
