added functionality for re-training existing model and testing out engine's playing strength

--- a/chess_engine.ipynb
+++ b/chess_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvriZp03GhrQwAwGxRbN9h",
+      "authorship_tag": "ABX9TyMK0+hPGmxSXsiaH1q4OEnj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -714,6 +714,180 @@
       ],
       "metadata": {
         "id": "PogsKy69Nydm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Re-Train Existing Model"
+      ],
+      "metadata": {
+        "id": "KBohDnBOZpEs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, random_split\n",
+        "\n",
+        "# Prepare the dataset and split into training and testing subsets\n",
+        "dataset = ChessDataset(chess_data['AN'])\n",
+        "dataset_size = len(dataset)\n",
+        "train_size = int(0.8 * dataset_size)  # 80% of the data for training\n",
+        "test_size = dataset_size - train_size\n",
+        "\n",
+        "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+        "\n",
+        "# Create data loaders for training and testing datasets\n",
+        "batch_size = 32\n",
+        "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "# Define the loss function and optimizer\n",
+        "custom_loss = ChessLoss()\n",
+        "learning_rate = 0.001\n",
+        "optimizer = optim.Adam(ChessNet().parameters(), lr=learning_rate)\n",
+        "\n",
+        "# Training loop\n",
+        "num_epochs = 15\n",
+        "\n",
+        "# Load the pre-trained model\n",
+        "chess_net_model = ChessNet()\n",
+        "chess_net_model.load_state_dict(torch.load('/content/chess_net_model.pth'))\n",
+        "# chess_net_model.eval()\n",
+        "\n",
+        "for epoch in range(num_epochs):\n",
+        "    # Training\n",
+        "    chess_net_model.train()\n",
+        "    total_train_loss = 0.0\n",
+        "    for inputs, targets in train_loader:\n",
+        "        optimizer.zero_grad()\n",
+        "        outputs = chess_net_model(inputs)\n",
+        "        loss = custom_loss.forward(outputs, targets)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        total_train_loss += loss.item() * inputs.size(0)\n",
+        "\n",
+        "    # Calculate average training loss for the epoch\n",
+        "    average_train_loss = total_train_loss / len(train_dataset)\n",
+        "\n",
+        "    # Step 5: Validation (Testing) after each epoch\n",
+        "    chess_net_model.eval()\n",
+        "    total_test_loss = 0.0\n",
+        "    correct_predictions = 0\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for inputs, targets in test_loader:\n",
+        "            outputs = chess_net_model(inputs)\n",
+        "            # loss = loss_function(outputs, targets)\n",
+        "            loss = custom_loss.forward(outputs, targets)\n",
+        "            total_test_loss += loss.item() * inputs.size(0)\n",
+        "\n",
+        "            # Convert one-hot encoded targets to class indices\n",
+        "            target_indices = torch.argmax(targets, dim=1)\n",
+        "\n",
+        "            # Calculate the number of correct predictions for accuracy calculation\n",
+        "            _, predicted = torch.max(outputs, 1)\n",
+        "            correct_predictions += (predicted == target_indices).sum().item()\n",
+        "\n",
+        "    # Calculate average testing loss and accuracy for the epoch\n",
+        "    average_test_loss = total_test_loss / len(test_dataset)\n",
+        "    accuracy = correct_predictions / len(test_dataset)\n",
+        "\n",
+        "    print(f\"Epoch [{epoch + 1}/{num_epochs}] - \"\n",
+        "          f\"Train Loss: {average_train_loss:.4f}, Test Loss: {average_test_loss:.4f}, \"\n",
+        "          f\"Accuracy: {accuracy:.4f}\")\n",
+        "\n",
+        "# Training loop ends here\n",
+        "\n",
+        "# Save the model's state dictionary (recommended for inference)\n",
+        "torch.save(chess_net_model.state_dict(), '/content/chess_net_model.pth')"
+      ],
+      "metadata": {
+        "id": "92exAPaFZps6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Testing Out the Engine's playing strength"
+      ],
+      "metadata": {
+        "id": "VOHQU4w7ZsRp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import chess.svg\n",
+        "from IPython.display import SVG, display, clear_output\n",
+        "import ipywidgets as widgets\n",
+        "\n",
+        "# Initialize the chess board and play against the model\n",
+        "board = chess.Board()\n",
+        "player_color = chess.BLACK  # You can choose the player's color (WHITE or BLACK)\n",
+        "\n",
+        "# Function to handle user input\n",
+        "def on_button_clicked(b):\n",
+        "    global player_move\n",
+        "    player_move = text.value\n",
+        "    board.push_san(player_move)\n",
+        "    update_board(board)\n",
+        "    if not board.is_game_over():\n",
+        "        play_engine_move()\n",
+        "\n",
+        "# Function to display the board\n",
+        "def update_board(board):\n",
+        "    last_move = None\n",
+        "    if len(board.move_stack) > 0:\n",
+        "        last_move = board.peek()\n",
+        "\n",
+        "    clear_output()\n",
+        "    display(SVG(chess.svg.board(board=board, orientation=chess.BLACK, lastmove=last_move, size=350)))\n",
+        "\n",
+        "# Initialize the interactive elements\n",
+        "text = widgets.Text()\n",
+        "button = widgets.Button(description=\"Submit\")\n",
+        "button.on_click(on_button_clicked)\n",
+        "\n",
+        "# Load the saved model\n",
+        "model = ChessNet()\n",
+        "model.load_state_dict(torch.load('/content/chess_net_model.pth'))\n",
+        "model.eval()\n",
+        "\n",
+        "# Move the model to the GPU\n",
+        "device = torch.device('cpu')\n",
+        "model.to(device)\n",
+        "\n",
+        "# Function to handle the model's move\n",
+        "def play_engine_move():\n",
+        "    # Model's turn: Use the model to predict the move\n",
+        "    move = choose_move(board, board.turn, chess.WHITE)\n",
+        "    board.push(move)\n",
+        "    update_board(board)\n",
+        "    if not board.is_game_over() and board.turn == player_color:\n",
+        "        display(text, button)\n",
+        "\n",
+        "# Display the initial board and prompt\n",
+        "update_board(board)\n",
+        "display(text, button)\n",
+        "\n",
+        "# Model's turn: Play the engine's move first\n",
+        "if board.turn != player_color:\n",
+        "    play_engine_move()\n",
+        "\n",
+        "\n",
+        "# Game over\n",
+        "# result = board.result()\n",
+        "# print(\"Game Over. Result: \", result)"
+      ],
+      "metadata": {
+        "id": "0cE76DAnZufx"
       },
       "execution_count": null,
       "outputs": []
